--- a/percona-server-57/Dockerfile
+++ b/percona-server-57/Dockerfile
@@ -1,11 +1,17 @@
-FROM almalinux:8-minimal
+FROM redhat/ubi8-minimal
 
-ARG PS_VERSION
-ARG OS_VER=el8
-ARG FULL_PERCONA_VERSION="$PS_VERSION.$OS_VER"
+ENV PS_VERSION 5.7.44-48.1
+ENV OS_VER el8
+ENV FULL_PERCONA_VERSION "$PS_VERSION.$OS_VER"
+
+# Do not report during Docker image creation.
+# Note that doing so, would create telemetry config file
+# which would prevent reporting when new container is started.
+# If we want to track Docker image creation as well,
+# remove telemetry config file after installing packages!
+ARG PERCONA_TELEMETRY_DISABLE=1
 
 COPY ps-entry.sh /docker-entrypoint.sh
-
 RUN set -ex; \
     # shadow-utils are needed for user/group manipulation on UBI-based images
     microdnf -y update; \
@@ -14,15 +20,15 @@ RUN set -ex; \
     useradd -u 1001 -r -g 1001 -s /sbin/nologin \
         -c "Default Application User" mysql; \
     export GNUPGHOME="$(mktemp -d)"; \
-    gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 430BDF5C56E7C94E848EE60C1C4CBDCDCD2EFD2A 99DB70FAE1D7CE227FB6488205B555B38483C65D; \
-    gpg --batch --export --armor 430BDF5C56E7C94E848EE60C1C4CBDCDCD2EFD2A > ${GNUPGHOME}/RPM-GPG-KEY-Percona; \
+    gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 4D1BB29D63D98E422B2113B19334A25F8507EFA5 99DB70FAE1D7CE227FB6488205B555B38483C65D; \
+    gpg --batch --export --armor 4D1BB29D63D98E422B2113B19334A25F8507EFA5 > ${GNUPGHOME}/PERCONA-PACKAGING-KEY; \
     gpg --batch --export --armor 99DB70FAE1D7CE227FB6488205B555B38483C65D > ${GNUPGHOME}/RPM-GPG-KEY-centosofficial; \
-    rpmkeys --import ${GNUPGHOME}/RPM-GPG-KEY-Percona ${GNUPGHOME}/RPM-GPG-KEY-centosofficial; \
+    rpmkeys --import ${GNUPGHOME}/PERCONA-PACKAGING-KEY ${GNUPGHOME}/RPM-GPG-KEY-centosofficial; \
     microdnf install -y findutils; \
     curl -sSL -o /tmp/percona-release.rpm https://repo.percona.com/yum/percona-release-latest.noarch.rpm; \
     rpmkeys --checksig /tmp/percona-release.rpm; \
     rpm -i /tmp/percona-release.rpm; \
-    percona-release setup ps57; \
+    percona-release enable-only ps-57; \
     rm -rf "$GNUPGHOME" /tmp/percona-release.rpm; \
     rpm --import /etc/pki/rpm-gpg/PERCONA-PACKAGING-KEY; \
     microdnf -y module disable mysql; \
@@ -69,9 +75,8 @@ RUN set -ex; \
     chmod +x /docker-entrypoint.sh
 
 VOLUME ["/var/lib/mysql", "/var/log/mysql"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
 USER mysql
 EXPOSE 3306
-
-ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["mysqld"]
