--- a/.github/workflows/nginx-ui.yml
+++ b/.github/workflows/nginx-ui.yml
@@ -1,9 +1,9 @@
 name: Build Nginx-UI Docker Image
 
 on:
-  #push:
-  #schedule:
-  #  - cron: "0 18 */7 * *"
+  push:
+  schedule:
+    - cron: "0 11 */11 * *"
   workflow_dispatch:
 
 jobs:
