--- a/nginx-ui/nginx.conf
+++ b/nginx-ui/nginx.conf
@@ -1,5 +1,7 @@
-user  nginx;
+user  www-data;
 worker_processes  auto;
+
+include /etc/nginx/modules-enabled/*.conf;
 
 error_log  /var/log/nginx/error.log crit;
 pid        /var/run/nginx.pid;
