--- a/.github/workflows/nginx-ui.yml
+++ b/.github/workflows/nginx-ui.yml
@@ -10,14 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - 
+      -
         name: Checkout repository
         uses: actions/checkout@v4
-      - 
+      -
         name: Get upstream version
         id: getversion
         run: |
-          echo "NUIVER=$(curl -sL https://api.github.com/repos/0xJacky/nginx-ui/releases/latest | grep tag_name | sed -E 's/.*"([^"]+)".*/\1/')" >> $GITHUB_OUTPUT
+          echo "NUIVER=$(curl -sL https://api.github.com/repos/0xJacky/nginx-ui/releases/latest | jq -r .name)" >> $GITHUB_OUTPUT
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
