--- a/.github/workflows/nginx-ui.yml
+++ b/.github/workflows/nginx-ui.yml
@@ -37,4 +37,8 @@ jobs:
           push: true
           context: ./nginx-ui
           platforms: linux/amd64,linux/arm64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nginx-ui:latest,${{ secrets.DOCKERHUB_USERNAME }}/nginx-ui:${{ steps.getversion.outputs.NUIVER }}
+          tags: >-
+            ${{ secrets.DOCKERHUB_USERNAME }}/nginx-ui:latest,
+            ${{ secrets.DOCKERHUB_USERNAME }}/nginx-ui:${{ steps.getversion.outputs.NUIVER }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
