--- a/.github/workflows/unblock-netease-music.yml
+++ b/.github/workflows/unblock-netease-music.yml
@@ -11,6 +11,7 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v5
         with:
@@ -47,7 +48,7 @@ jobs:
           platforms: ${{ env.platforms }}
           push: true
           tags: >-
-            ${{ env.image }}:${{ steps.getversion.outputs.GITVERSION }}
+            ${{ env.image }}:${{ steps.getversion.outputs.GITVERSION }},
             ${{ env.image }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
